# Aurum-Primer

./: .editorconfig  .eslintrc.json  .eslintrc.yml  .gitignore  .pnp.cjs  .prettierrc  BUILD.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.tsx  store.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/proto/: sing-box-daemon.proto
src-tauri/src/: compio_unix_stream_wrapper.rs  main.rs  os_directories.rs  random_cidr_generator.rs  singbox_daemon_client.rs  singbox_daemon_client_uds.rs  singbox_daemon_manager.rs  singbox_manager.rs
src/components/: Dashboard.tsx  LogoText.tsx  Navbar.tsx  TrivialErrorModal.tsx
src/constants/: Routes.ts  Themes.ts  index.ts
src/libs/: shadowsocks.ts  tauri-store-wrapper.ts  v2ray.ts
src/libs/config-types/: generic-inbounds.ts  generic-outbounds.ts  routing.ts
src/pages/: Dashboard.tsx  Setup.tsx
src/signals/: persisted.ts  theme.ts
