[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }
tonic-build = "0.10.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "os-all", "dialog-open", "dialog-save",
	"path-all",
	"shell-open",
	"app-all",
	"fs-all",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rustix = { version = "0.38.21", features = ["process"] }
rand = "0.8.5"
tonic = { version = "0.10.2", features = ["prost"] }
prost = "0.12.1"
compio = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-http = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-buf = { git = "https://github.com/compio-rs/compio", branch = "master" }
compio-io = { git = "https://github.com/compio-rs/compio", branch = "master" }
kanal = "0.1.0-pre8"
tower = { version = "0.4.13", features = ["full"] }
send_wrapper = { version = "0.6.0", features = ["futures"] }
tokio = { version = "1.34.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
http = "0.2.0"
num-traits = "0.2.17"
num-derive = "0.4.1"

[dependencies.windows]
version = "0.52"
features = [
	"Data_Xml_Dom",
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_System_Registry",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Shell",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = 3     # Optimize for binary performance, instead of size
strip = true      # Remove debug symbols
